orm-tests/tests/snapshots/query_define_function__function_definition.snap
---
source: orm-tests/tests/query_define_function.rs
expression: person.to_raw().build()
---
get_person('Oyelowo', 'Oyedayo', '2022-09-21')
