orm-tests/tests/snapshots/query_define_function__function_definition_with_idiomatic_if_statement-10.snap
---
source: orm-tests/tests/query_define_function.rs
expression: spaceship.fine_tune_params()
---
get_or_create_spaceship(first_name, $_param_00000001, $birthday, $_param_00000002)
