orm-tests/tests/snapshots/query_define_function__function_definition_with_idiomatic_if_statement-11.snap
---
source: orm-tests/tests/query_define_function.rs
expression: spaceship.to_raw().build()
---
fn::get_or_create_spaceship('Oyelowo', $last_name, birthday, 5)
