orm-tests/tests/snapshots/query_define_function__function_definition_with_idiomatic_if_statement-12.snap
---
source: orm-tests/tests/query_define_function.rs
expression: spaceship.fine_tune_params()
---
get_or_create_spaceship($_param_00000001, $last_name, birthday, $_param_00000002)
