orm-tests/tests/snapshots/query_define_function__function_definition_with_idiomatic_if_statement-13.snap
---
source: orm-tests/tests/query_define_function.rs
expression: spaceship_statement.to_raw().build()
---
DEFINE FUNCTION get_or_create_spaceship($first_arg: string, $last_arg: string, $birthday_arg: datetime, $_very_complex_type: int | option<float> | array<option<string> | int | null, 10> | set<option<number> | float | null, 10> | option<array<any>> | option<set<option<int>>>) {
LET $person = (SELECT * FROM space_ship WHERE (id = $first_arg) AND (name = $last_arg) AND (created = $birthday_arg));

IF $person[0].id IS NOT NONE 
	{ RETURN $person; }
ELSE
	{ RETURN (CREATE space_ship SET id = $first_arg, name = $last_arg, created = $birthday_arg); };
};
