orm-tests/tests/snapshots/query_define_function__function_definition_with_idiomatic_if_statement-6.snap
---
source: orm-tests/tests/query_define_function.rs
expression: spaceship.fine_tune_params()
---
fn::get_or_create_spaceship($_param_00000001, $_param_00000002, birthday, $_param_00000003)
